<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="32dp"
    android:clipToPadding="false"
    android:overScrollMode="ifContentScrolls">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Text.Title"
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputNumbers1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_input_box"
            android:hint="@string/enter_numbers_1"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/textTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNumbers1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:background="@null"
                android:scrollbars="vertical"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:inputType="text|numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputNumbers2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_input_box"
            android:hint="@string/enter_numbers_2"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/layoutInputNumbers1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNumbers2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:background="@null"
                android:scrollbars="vertical"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:inputType="text|numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputNumbers3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_input_box"
            android:hint="@string/enter_numbers_3"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/layoutInputNumbers2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNumbers3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:background="@null"
                android:scrollbars="vertical"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:inputType="text|numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputNumbers4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_input_box"
            android:hint="@string/enter_numbers_4"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/layoutInputNumbers3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNumbers4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:background="@null"
                android:scrollbars="vertical"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:inputType="text|numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Text"
            android:id="@+id/titleIntergroupVariance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/intergroup_variance"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/layoutInputNumbers4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            style="@style/Text"
            android:id="@+id/textIntergroupVariance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/titleIntergroupVariance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="0.0000" />

        <TextView
            style="@style/Text"
            android:id="@+id/titleResidualVariance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/residual_variance"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/textIntergroupVariance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            style="@style/Text"
            android:id="@+id/textResidualVariance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/titleResidualVariance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="0.0000" />

        <TextView
            style="@style/Text"
            android:id="@+id/titleTotalVariance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/total_variance"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/textResidualVariance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            style="@style/Text"
            android:id="@+id/textTotalVariance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/titleTotalVariance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="0.0000" />

        <TextView
            style="@style/Text"
            android:id="@+id/titleFisherCriterion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fisher_criterion"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/textTotalVariance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            style="@style/Text"
            android:id="@+id/textFisherCriterion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/titleFisherCriterion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="0.0000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>